@@ -18,14 +18,19 @@ class MapsOSMDispMap extends MapsBaseMap {
 	 * @since 0.6.4
 	 */
 	public function addSpecificMapHTML( Parser $parser ) {	
-		global $wgOut;
+		global $wgLang;
 		
+		$thumbs = $this->thumbs ? 'yes' : 'no';
+		$photos = $this->photos ? 'yes' : 'no';
+		$lang = $wgLang->getCode();
+		
+		// https://secure.wikimedia.org/wikipedia/de/wiki/Wikipedia:WikiProjekt_Georeferenzierung/Wikipedia-World/en#Expert_mode
 		$this->output .= Html::element(
 			'iframe',
 			array(
 				'id' => $this->service->getMapId(),
 				'style' => "width: $this->width; height: $this->height; clear: both;",
-				'src' => "http://toolserver.org/~kolossos/openlayers/kml-on-ol.php?zoom={$this->zoom}&lat={$this->centreLat}&lon={$this->centreLon}&lang=en"
+				'src' => "http://toolserver.org/~kolossos/openlayers/kml-on-ol.php?zoom={$this->zoom}&lat={$this->centreLat}&lon={$this->centreLon}&lang=$lang&thumbs=$thumbs&photo=$photos"
 			),
 			wfMsg( 'maps-loading-map' )
 		);
